--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ script:
   - ./configure -C --enable-coverage --with-boost=/usr/local && make pretty-check && make check
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -g 'include/*' -g 'src/*' -G 'tests/*'
