Bootstrapped the package for release v1.0.3.

--- a/Makefile.in
+++ b/Makefile.in
@@ -34,7 +34,8 @@
 
 #
 #    Description:
-#      This file is the GNU automake template for the Nuovations CoreFoundation Utilities Library/Framework.
+#      This file is the GNU automake template for the Nuovations CoreFoundation
+#      Utilities Library/Framework.
 #
 
 VPATH = @srcdir@
@@ -460,32 +461,37 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_MAKEFLAGS = --no-print-directory
 SUBDIRS = \
-    third_party                             \
-    include                                 \
-    src                                     \
-    tests                                   \
-    doc                                     \
+    third_party                                    \
+    include                                        \
+    src                                            \
+    tests                                          \
+    doc                                            \
     $(NULL)
 
 EXTRA_DIST = \
-    Makefile-bootstrap                      \
-    .default-version                        \
-    bootstrap                               \
-    bootstrap-configure                     \
-    CHANGES                                 \
-    LICENSE                                 \
-    README.md                               \
+    Makefile-bootstrap                             \
+    .clang-format                                  \
+    .default-version                               \
+    .travis.yml                                    \
+    .travis/before_install.sh                      \
+    bootstrap                                      \
+    bootstrap-configure                            \
+    build/clang-format/clang-format-pretty.options \
+    build/cstyle/cstyle.options                    \
+    README.md                                      \
     $(NULL)
 
 BUILT_SOURCES = \
-    .local-version                          \
+    .local-version                                 \
     $(NULL)
 
 dist_doc_DATA = \
+    CHANGES                                        \
+    LICENSE                                        \
     $(NULL)
 
 DISTCLEANFILES = \
-    .local-version                          \
+    .local-version                                 \
     $(NULL)
 
 
@@ -1067,10 +1073,10 @@ CFUTILITIES_VERSION                     ?= $(MAYBE_CFUTILITIES_VERSION)
 define check-file-.local-version
 if [ "$(origin CFUTILITIES_VERSION)" != "file" ]; then \
     echo "$(CFUTILITIES_VERSION)" > "$(2)";            \
-else                                                             \
-    $(abs_top_nlbuild_autotools_dir)/scripts/mkversion           \
+else                                                   \
+    $(abs_top_nlbuild_autotools_dir)/scripts/mkversion \
         -b "$(CFUTILITIES_VERSION)" "$(top_srcdir)"    \
-        > "$(2)";                                                \
+        > "$(2)";                                      \
 fi
 endef
 
