--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,7 @@ jobs:
 
     - name: Install OpenCFLite Dependency
       run: |
+        cd "${GITHUB_WORKSPACE}/opencflite"
         sudo make install
         sudo ldconfig
 
