--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,12 @@
 
 #
 #    Description:
-#      This file is the GitHub Actions hosted, distributed continuous 
+#      This file is the GitHub Actions hosted, distributed continuous
 #      integration configuration file for the Nuovations Log
 #      Utilities library.
 #
 
+---
 name: Build
 
 on: [push, pull_request]
@@ -38,8 +39,8 @@ jobs:
     strategy:
       matrix:
         compiler:
-          - { name: GCC,        c: gcc,   cxx: g++     options: "--enable-coverage" }
-          - { name: clang/LLVM, c: clang, cxx: clang++ options: "" }
+          - { name: GCC,        c: gcc,   cxx: g++,     options: "--enable-coverage" }
+          - { name: clang/LLVM, c: clang, cxx: clang++, options: "" }
     env:
       CC: ${{matrix.compiler['c']}}
       CXX: ${{matrix.compiler['cxx']}}
