Re-bootstrapped the GNU autotools build system for the package.

--- a/Makefile.in
+++ b/Makefile.in
@@ -314,6 +314,9 @@ CFUTILITIES_VERSION_AGE = @CFUTILITIES_VERSION_AGE@
 CFUTILITIES_VERSION_CURRENT = @CFUTILITIES_VERSION_CURRENT@
 CFUTILITIES_VERSION_INFO = @CFUTILITIES_VERSION_INFO@
 CFUTILITIES_VERSION_REVISION = @CFUTILITIES_VERSION_REVISION@
+CF_CPPFLAGS = @CF_CPPFLAGS@
+CF_LDFLAGS = @CF_LDFLAGS@
+CF_LIBS = @CF_LIBS@
 CLANG_FORMAT = @CLANG_FORMAT@
 CMP = @CMP@
 CPP = @CPP@
