--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
   linux:
     runs-on: ubuntu-latest
-    name: "Linux ${{matrix.compiler['name']}}"
+    name: "Linux ${{matrix.compiler['name']}} with ${{matrix.opencflite['name']}}"
 
     # Coverage seems to have a problem on Linux with clang due to an
     # 'atexit' issue during linking of the test executables. So, only
