--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
         tar --directory tzcode2021a -zxf tzcode2021a.tar.gz
 
     - name: Checkout libkqueue OpenCFLite v635 Dependency
-      if: ${{matrix.opencflite['ref']}} == 'opencflite-635'
+      if: matrix.opencflite['ref'] == 'opencflite-635'
       uses: actions/checkout@v2
       with:
         repository: mheily/libkqueue
@@ -79,7 +79,7 @@ jobs:
         path: libkqueue
 
     - name: Configure libkqueue OpenCFLite v635 Dependency
-      if: ${{matrix.opencflite['ref']}} == 'opencflite-635'
+      if: matrix.opencflite['ref'] == 'opencflite-635'
       run: |
         cd "${GITHUB_WORKSPACE}/libkqueue"
         cmake -S. -B. -G "Unix Makefiles" \
@@ -87,13 +87,13 @@ jobs:
           -DCMAKE_INSTALL_LIBDIR="lib"
 
     - name: Build libkqueue OpenCFLite v635 Dependency
-      if: ${{matrix.opencflite['ref']}} == 'opencflite-635'
+      if: matrix.opencflite['ref'] == 'opencflite-635'
       run: |
         cd "${GITHUB_WORKSPACE}/libkqueue"
         make -j
 
     - name: Install libkqueue OpenCFLite v635 Dependency
-      if: ${{matrix.opencflite['ref']}} == 'opencflite-635'
+      if: matrix.opencflite['ref'] == 'opencflite-635'
       run: |
         cd "${GITHUB_WORKSPACE}/libkqueue"
         sudo make install
