--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2021-2023 Nuovation System Designs, LLC. All Rights Reserved.
+#    Copyright (c) 2021-2024 Nuovation System Designs, LLC. All Rights Reserved.
 #
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -182,8 +182,9 @@ jobs:
 
     - name: Bootstrap and Configure
       run: |
+        eval "$(brew shellenv)"
         export PATH="$(brew --prefix m4)/bin:${PATH}"
-        ./bootstrap-configure -C --enable-coverage --with-boost=/usr/local
+        ./bootstrap-configure -C --enable-coverage --with-boost="$(brew --prefix boost)" --with-cppunit="$(brew --prefix cppunit)"
 
     - name: Coding Style
       run: |
