Evaluate 'brew shellenv' when bootstrapping and configuring to establish the location of Homebrew.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,6 +182,7 @@ jobs:
 
     - name: Bootstrap and Configure
       run: |
+        eval "$(brew shellenv)"
         export PATH="$(brew --prefix m4)/bin:${PATH}"
         ./bootstrap-configure -C --enable-coverage --with-boost=/usr/local
 
