--- a/Makefile-bootstrap
+++ b/Makefile-bootstrap
@@ -52,7 +52,7 @@ abs_srcdir                       ?= $(realpath $(srcdir))
 top_srcdir                       ?= $(srcdir)
 abs_top_srcdir                   ?= $(realpath $(top_srcdir))
 
-nlbuild_autotools_stem           ?= third_party/nlbuild-autotools/repo
+nlbuild_autotools_stem           ?= @NLBUILD_AUTOTOOLS_STEM@
 abs_top_nlbuild_autotools_dir    ?= $(abs_top_srcdir)/$(nlbuild_autotools_stem)
 
 include $(abs_top_nlbuild_autotools_dir)/make/pre.mak
